--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ words_per_minute         : 200
 comments:
   provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
-    shortname            : "BlackCode"
+    shortname            : "BLACKCODE"
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -288,3 +288,4 @@ defaults:
       comments: true
       share: true
       related: true
+      show_date: true
